# synalinks

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  FAQ.html  Introduction.html  MANIFEST.in  README.md  advanced_example.py  api_gen.py  app_direct.py  docker-compose.yml  index.html  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
CheatSheet/: index.html
Code Examples/Advanced/: First Knowledge Graph Schema.html  Implementing Custom Modules And Programs Via Subclassing.html  Knowledge Augmented Generation.html  Knowledge Extraction.html  Retrieval Augmented Generation.html
Code Examples/Autonomous Agent/: index.html
Code Examples/Basics/: Control Flow.html  Conversational Applications.html  First Programs.html  First Steps.html  Reward Metrics And Optimizers.html  Training Programs.html
Code Examples/Conditional Branches/: index.html
Code Examples/Conversational Applications/: index.html
Code Examples/Cypher Agent/: index.html
Code Examples/Data Model Operators/: index.html
Code Examples/Decisions/: index.html
Code Examples/Deep Agent/: index.html
Code Examples/Document RAG/: index.html
Code Examples/First Steps/: index.html
Code Examples/Functional API/: index.html
Code Examples/Implementing Custom Modules Via Subclassing/: index.html
Code Examples/Interactive Agent/: index.html
Code Examples/JSON Ops/: index.html
Code Examples/Knowledge Extraction and Storage/: index.html
Code Examples/MCP Agent/: index.html
Code Examples/Mixing Strategy/: index.html
Code Examples/Parallel Branches/: index.html
Code Examples/Python Synthesis/: index.html
Code Examples/RAG Agent/: index.html
Code Examples/Recursive Language Model Agent/: index.html
Code Examples/Reward Metrics And Optimizers/: index.html
Code Examples/SQL Agent/: index.html
Code Examples/Sequential API/: index.html
Code Examples/Subclassing/: index.html
Code Examples/Training Programs/: index.html
Code Examples/Vector RAG Agent/: index.html
Deployment/: Building a REST API.html  index.html
Deployment/Building a REST API/: index.html
Deployment/Enabling LM Tracing/: index.html
Differences with DSPy/: index.html
Differences with Keras/: index.html
FAQ/: index.html
Graph Visualization/: Using G.V() as Graph IDE.html
Graph Visualization/Using G.V() as Graph IDE/: index.html
Introduction/: index.html  index.md
Modules/: index.html
Monitoring/: Arize Phoenix.html
Monitoring/Arize Phoenix/: index.html
Observability/MLflow/: index.html
Project Templates/: index.html
Synalinks API/: Config.html  Embedding Models API.html  Knowledge Bases API.html  Language Models API.html
Synalinks API/Built-in Datasets/: ARC-AGI.html  GSM8K.html  HotpotQA.html  index.html
Synalinks API/Callbacks API/: Base Callback class.html  CSVLogger.html  ProgramCheckpoint.html  index.html
Synalinks API/Config/: index.html
Synalinks API/Data Models API/: The Base DataModels.html  The DataModel class.html  The JsonDataModel class.html  The SymbolicDataModel class.html  The Variable class.html  index.html
Synalinks API/Embedding Models API/: index.html
Synalinks API/Hooks API/: index.html
Synalinks API/Knowledge Base API/: index.html
Synalinks API/Knowledge Bases API/: index.html
Synalinks API/Language Models API/: index.html
Synalinks API/Metrics/: Base Metric class.html  FScore metrics.html  Metric wrappers and reduction metrics.html  Regression metrics.html  index.html
Synalinks API/Modules API/: Base Module class.html  index.html
Synalinks API/Observability API/: index.html
Synalinks API/Ops API/: Embedding Models Ops.html  JSON Ops.html  Language Models Ops.html  index.html
Synalinks API/Optimizers API/: Base Optimizer class.html  (+4 more)
docs/: CheatSheet.md  Differences with DSPy.md  Differences with Keras.md  FAQ.md  Introduction.md  Modules.md  Project Templates.md  index.md
examples/: 0_first_steps.py  10_autonomous_agent.py  11_interactive_agent.py  12_knowledge_extraction_and_storage.py  13_document_rag.py  14_rag_agent.py  14_vector_rag_agent.py  15_mcp_agent.py  16_sql_agent.py  17_recursive_language_model_agent.py  18_hyperparameter_search_with_keras_tuner.py  19_multi_objective_lm_selection.py  1a_functional_api.py  1b_subclassing.py  1c_sequential.py  1d_mixing_strategy.py  20_deep_agent.py  21_documents_datasets.py  22_python_synthesis.py  23_cypher_agent.py  2_parallel_branches.py  3_decisions.py  4_conditional_branches.py  5a_data_model_operators.py  5b_json_ops.py  6_conversational_applications.py  7_reward_metrics_and_optimizers.py  8_training_programs.py  9_custom_modules.py  9a_trainable_variables.py  __init__.py  business_data.db  checkpoint.program.json  mcp_math_server.py  rag_agent.db  rag_agent.db.wal
guides/: 10_datasets.py  10_observability.py  10_output_guard.py  11_code_mode_agent.py  11_datasets.py  11_trainable_variables.py  12_recursive_language_model_agent.py  12_rewards.py  12_trainable_variables.py  13_metrics.py  13_rewards.py  14_metrics.py  14_training.py  15_callbacks.py  15_training.py  16_callbacks.py  16_hyperparameter_search.py  17_hyperparameter_search.py  17_multi_objective_lm_selection.py  18_multi_objective_lm_selection.py  18_recursive_language_model_agent.py  19_fastapi_deployment.py  19_recursive_language_model_agent.py  1_getting_started.py  20_fastapi_deployment.py  20_fastmcp_deployment.py  21_deep_agent.py  21_fastmcp_deployment.py  22_deep_agent.py  22_sql_agent.py  23_sql_agent.py  23_vector_rag_agent.py  24_python_synthesis.py  24_vector_rag_agent.py  25_cypher_agent.py  25_python_synthesis.py  26_cypher_agent.py  26_knowledge_graph_extraction.py  27_free_form_knowledge_graph_extraction.py  27_knowledge_graph_extraction.py  (+22 more)
img/: banner-dark.html  banner-light.html
javascripts/: summarize.js
overrides/: main.html
search/: search_index.json
shell/: api_gen.sh  doc.sh  fix_doc_image_paths.py  gen_notebooks.py  install.sh  test.sh
stylesheets/: extra.css
synalinks/: __init__.py
tests/: conftest.py  test_age_adapter.py
(+970 files in other folders)
