[project]
name = "synalinks"
description = "Graph-Based Programmable Neuro-Symbolic LM Framework"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: Unix",
  "Operating System :: MacOS",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]
dependencies = [
  "absl-py",
  "asyncio",
  "click",
  "datasets",
  "docstring-parser",
  "duckdb",
  "fastmcp>=3.2.0",
  "graphviz",
  "greenlet",
  "inquirer",
  "jinja2",
  "jsonschema",
  "ladybug>=0.17.1",
  "lancedb>=0.30.2",
  "litellm>=1.84.0",
  "markdown-it-py",
  "matplotlib",
  "mcp",
  "mlflow>=3.11.1",
  "namex",
  "numpy",
  "dill",
  "mirage-ai>=0.0.2",
  "optree",
  "orjson",
  "pydantic",
  "pydotplus",
  "rich",
  "skills-ref>=0.1.1",
  "synaops>=0.2.1",
  "tenacity",
]

[project.urls]
Homepage = "https://github.com/SynaLinks/synalinks"
Issues = "https://github.com/SynaLinks/synalinks/issues"

[project.scripts]
synalinks = "synalinks.cli.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json"]
# Ship the project templates inside the wheel so `synalinks init` works
# offline. The patterns cover regular files and dotfiles (e.g. .gitignore,
# .python-version, .gitkeep) at every depth under cli/templates.
"synalinks.cli" = ["templates/**/*", "templates/**/.*"]

[tool.setuptools.dynamic]
version = {attr = "synalinks.src.version.__version__"}

[tool.setuptools.packages.find]
include = ["synalinks", "synalinks.*"]

[tool.ruff]
line-length = 90
# Bundled project templates are scaffolding data, not linted source.
extend-exclude = ["synalinks/cli/templates"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle error
  "F",  # Pyflakes
  "I",  # isort
]
ignore = [
  "E722",  # do not use bare 'except'
  "E741",  # ambiguous variable name
  "E731",  # do not assign a `lambda` expression, use a `def`
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["E501", "F401"]  # lines too long; imported but unused
"**/random.py" = ["F401"]  # imported but unused
"examples/*" = ["I", "E"]
"notebooks/*" = ["I", "E", "F"]
"guides/*" = ["I", "E", "F"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["synalinks"]

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::ImportWarning",
  "ignore::RuntimeWarning",
  "ignore::PendingDeprecationWarning",
  "ignore::FutureWarning",
  "ignore::UserWarning",
]
addopts = "--cov-report xml --cov=synalinks -v"

# Do not run tests in the `build` folders or in the gitignored
# `synalinks-research` stash (research-only code, not part of the
# released package).
norecursedirs = ["build", "synalinks-research"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@abstract",
  "raise NotImplementedError",
]
omit = [
  "*/__init__.py",
  "*/plot_*.py",
  "*/*_visualization.py",
  "*/async_utils.py",
]

[tool.coverage.run]
branch = true
omit = [
  "*/__init__.py",
  "*/async_utils.py",
  "*_test.py",
  "*/testing/*",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "keras-tuner>=1.4",
    "mkdocstrings[python]>=1.0.4",
    "zensical>=0.0.43",
]
